--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ nav {
     background-color: blue;
     color: white;
     border-style: none;
-    padding: 1rem 1rem;
+    padding: 1.2rem 1rem;
     font-weight: bolder;
 
 }
@@ -129,7 +129,7 @@ nav {
 .title2 {
 
     text-align: center;
-    margin-bottom: 2rem;
+    margin: 3rem 0;
 }
 
 .row1 {
@@ -196,7 +196,7 @@ h6 {
     border: 1px solid #dcdcdd;
 }
 .sec2-rw2 {
-    height: 200px;
+    height:210px;
    display: flex;
    justify-content: space-between;
     padding: 0.5rem 2rem;
@@ -211,7 +211,7 @@ h6 {
     width: 100%;
 }
 .sec3-rw1 {
-    flex-basis: 100%;
+    flex-basis: 80%;
      padding: 1rem 2rem;
     
  }
@@ -236,4 +236,15 @@ h6 {
 .sec3-btn button:hover {
     background-color: rgb(3, 184, 145);
     border: 1px solid rgb(145, 141, 141);
+    color: white;
+}
+.card{
+   
+    
+    display: flex;
+   
+    justify-content: space-between;
+    column-gap: 3rem;
+    padding-top: 4rem;
+    width: calc(100% / 3);
 }
