--- a/css/style.css
+++ b/css/style.css
@@ -248,3 +248,45 @@ h6 {
     padding-top: 4rem;
     width: calc(100% / 3);
 }
+
+.sec5-btn button {
+    background-color:white;
+    color: black;
+    border-style: none;
+    padding: 1rem 1.5rem;
+    font-weight: bolder;
+
+}
+
+.sec5-btn button:hover {
+    background-color: rgb(3, 184, 145);
+    border: 1px solid rgb(145, 141, 141);
+}
+.qea{
+    padding: 2rem 0.5rem;
+border-top:1px solid rgb(83, 81, 81) ;
+}
+.sec6 {
+    display: flex;
+    margin-top: 2rem;
+    background-color: black;
+    color: white;
+
+}
+.sec1 { background-color: #B4D0E7;
+    
+}
+.sec7  {
+ 
+    margin: auto;
+    max-width: 720px;
+    padding-top: 100px;
+
+}
+.sec7 ul{
+    list-style: none;
+   padding: 1rem ;
+}
+.sec7-li{
+    margin: 1rem;
+}
